--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".jagalchi.app.CaptureService"
+            android:hardwareAccelerated="true">
+
+        </service>
     </application>
 
 </manifest>
