--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/notification"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:largeHeap="true"
@@ -31,8 +31,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".jagalchi.app.CaptureService"
-            android:hardwareAccelerated="true">
+        <service android:name=".jagalchi.app.CaptureService">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
