--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,10 @@
         android:supportsRtl="true"
         android:largeHeap="true"
         android:theme="@style/AppTheme"
-        android:name=".jagalchi.util.AnalyticsApplication">
+        android:name=".tentoone.util.AnalyticsApplication">
 
         <activity
-            android:name=".jagalchi.app.MainActivity"
+            android:name=".tentoone.app.MainActivity"
             android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".jagalchi.app.CaptureService">
+        <service android:name=".tentoone.app.CaptureService">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
