--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme"
         android:name=".tentoone.util.AnalyticsApplication">
 
@@ -30,6 +28,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <receiver android:name=".tentoone.app.NotificationDismissedReceiver"
+            android:exported="false">
+
+        </receiver>
 
         <service android:name=".tentoone.app.CaptureService">
             <intent-filter>
