--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        android:largeHeap="true"
         android:name=".tentoone.util.AnalyticsApplication">
 
         <activity
@@ -29,11 +30,6 @@
             </intent-filter>
         </activity>
         
-        <receiver android:name=".tentoone.app.NotificationDismissedReceiver"
-            android:exported="false">
-
-        </receiver>
-
         <service android:name=".tentoone.app.CaptureService">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
